sidekiq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: sidekiq
  name: sidekiq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sidekiq
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sidekiq
    spec:
      containers:
      - image: isibrahim/dockerizing-ruby-drkiq:latest
        name: sidekiq
        command: ["sh","-c","bundle exec sidekiq"]
